# kommunikeer

./: .gitignore  README.md
services/scanner/: pyproject.toml
services/translator/: ocr_results_image_0_7.json  requirements.txt  translator_test.py
services/vision/: .dockerignore  .gitignore  Dockerfile  README.md  logging.json  main.py  pyproject.toml  pyrefly.toml  requirements.txt
services/vision/models/: .gitignore  config.yml  ocr.py
services/vision/routes/: __init__.py
services/vision/routes/analyze/: router.py
