[project]
name = "kommunikeer-vision-service"
version = "1.0.0"
description = "Vision service for Kommunikeer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.122.0",
    "hypercorn>=0.18.0",
    "paddleocr>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
]

[tool.pyrefly]
type_checking_mode = "strict"
